--- a/main.css
+++ b/main.css
@@ -1,7 +1,17 @@
-nav {
-
+body {
+  font-family:'Oswald', sans-serif;
 }
-a {
-  text-decoration: none;
+nav {
+  width: 100%;
+  text-align: center;
+}
+.button {
+  background-color: black;
   color: white;
+  margin: 0 .1em;
+  max-width: 20%
+}
+.button a:active {
+  background-color: white;
+  color: black;
 }
