Updated navbar to a href.

--- a/main.css
+++ b/main.css
@@ -2,16 +2,17 @@ body {
   font-family:'Oswald', sans-serif;
 }
 nav {
-  width: 100%;
   text-align: center;
 }
-.button {
+a {
+  display: inline-block;
+  text-align: center;
   background-color: black;
   color: white;
-  margin: 0 .1em;
-  max-width: 20%
-}
-.button a:active {
-  background-color: white;
-  color: black;
+  height: 3em;
+  width: 20%;
+  text-decoration: none;
+  font-size: 2em;
+  vertical-align: middle;
+  padding-top: .5em;
 }
