updated future versions section to include level(A-C Grade) of priority.

--- a/my-website/main.css
+++ b/my-website/main.css
@@ -41,6 +41,11 @@ body {
 .section h2 {
   margin-bottom: 2em;
 }
+
+.resume a {
+  text-decoration: none;
+  color: white;
+}
 .footer {
   margin-bottom: 2em;
 }
