--- a/assets/css/main copy.css
+++ b/assets/css/main copy.css
@@ -8,8 +8,8 @@ body {
 }
 .header {
   background-image:url('images/backgroundphoto2.jpg');
-  height: 32.2em;
-  /*background-size: cover;*/
+  height: 51em;
+  width: 100%;
 }
 .header h1 {
   margin-top: 0em;
@@ -18,13 +18,14 @@ body {
 }
 .header nav {
   text-align: center;
-  margin-top: 21em;
+  margin-top: 37em;
+  width: auto;
 }
 .header a {
   display: inline-block;
   text-align: center;
   color: white;
-  height: 2.5em;
+  height: 3em;
   width: 20%;
   text-decoration: none;
   font-size: 2em;
@@ -32,7 +33,6 @@ body {
   margin: 0 .3em;
   border: 2px solid white;
 }
-
 .section {
   margin: 10%;
 }
@@ -58,7 +58,6 @@ body {
   color: white;
   padding: 0 1em;
 }
-
 a:visited {
 }
 .navbar-fixed {
