updated location links for the images and css folders

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ body {
   font-size: 120%;
 }
 .header {
-  background-image:url('images/backgroundphoto2.jpg');
+  background-image:url('../images/backgroundphoto2.jpg');
   height: 51em;
   width: 100%;
 }
